--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				Sitio desarrollado por <a href="https://twitter.com/bernethe" target="_blank">@bernethe</a> para la prueba de ingreso a <a href="https://www.ld.co.cr/" target="_blank">Logical Data</a>. <br> Diseño de <a href="https://dribbble.com/shots/6592690-Food-Delivery-Dashboard" target="_blank">Cuberto</a> - Íconos por <a href="https://www.flaticon.com/" target="_blank">Flaticon</a> - Imágenes de <a href="https://www.freepik.com/" target="_blank">Freepik</a>
+				Sitio desarrollado por <a href="https://twitter.com/bernethe" target="_blank">@bernethe</a> para la prueba de ingreso a <a href="https://www.ld.co.cr/" target="_blank">Logical Data</a>. <br> Diseño de <a href="https://dribbble.com/shots/6592690-Food-Delivery-Dashboard" target="_blank">Cuberto</a> - Íconos por <a href="https://www.flaticon.com/" target="_blank">Flaticon</a> - Imágenes de <a href="https://www.freepik.com/" target="_blank">Freepik</a> & <a href="https://unsplash.com/" target="_blank">Unsplash</a>
 			</div>
 		</div>
 	</div>
